--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
     "expo-camera": "~13.1.0",
-    "expo-media-library": "~15.0.0"
+    "expo-media-library": "~15.0.0",
+    "expo-location": "~15.0.1",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
